--- a/lesson-3-events-processing/exercises/06-resize-s3-image-solution/backend/serverless.yml
+++ b/lesson-3-events-processing/exercises/06-resize-s3-image-solution/backend/serverless.yml
@@ -1,4 +1,4 @@
-service: serverless-udagram-app
+service: serverless-forest-app
 
 frameworkVersion: '3'
 
@@ -7,15 +7,15 @@ provider:
   runtime: nodejs16.x
 
   stage: ${opt:stage, 'dev'}
-  region: ${opt:region, 'us-east-1'}
+  region: ${opt:region, 'ap-southeast-2'}
 
   environment:
     GROUPS_TABLE: Groups-${self:provider.stage}
     IMAGES_TABLE: Images-${self:provider.stage}
     IMAGE_ID_INDEX: ImageIdIndex
-    IMAGES_S3_BUCKET: udagram-images-${self:provider.stage}
+    IMAGES_S3_BUCKET: forest-images-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
-    THUMBNAILS_S3_BUCKET: udagram-thumbnail-${self:provider.stage}
+    THUMBNAILS_S3_BUCKET: forest-thumbnail-${self:provider.stage}
 
   iam:
     role:
